docs : 시퀀스 다이어그램 수정

--- a/hhplus-concert-reservation/document/시퀀스다이어그램.md
+++ b/hhplus-concert-reservation/document/시퀀스다이어그램.md
@@ -1,1 +1,25 @@
+### 유저 토큰 발급 API
+[![](https://mermaid.ink/img/pako:eNptUT1LA0EQ_SvD1kr6KwKBBLlCDZ5p9FJsdid6mNs790OQEIiNIAixMAqSIqWFwqEp_E25u__g3m2CRdximY_HvDfzxoQlHIlHFF4bFAzbEb2QNA4F2NdiOpHQUyhdnlKpIxalVGjwhUbJMNX_NVtdf7cYoLyJGAJVoFy4i2lTTQdU1SA-cH33Vyr2m0072YPzg85pHxo6uULRiJQy2Bgb2_f5ZCO861vshtCDXs9vQ57NIH-crn-y4nUFxXKef6_W2RTK2Uc5f8-fFlDeL8u7zAIX5csDFG_Pxdenm7eZtOWviaEipmK7haOsVFp9J52ge3wUdPoOGooaEwqyR2KUMY24Pfm4KoZEX2KMIfFsyHFIzUiHJBQTC6VGJ8GtYMTT0uAeMSmneusQ8YZ0pGzV3u0sSf5y5JF17dDZWrs7-QUqobJ3?type=png)](https://mermaid.live/edit#pako:eNptUT1LA0EQ_SvD1kr6KwKBBLlCDZ5p9FJsdid6mNs790OQEIiNIAixMAqSIqWFwqEp_E25u__g3m2CRdximY_HvDfzxoQlHIlHFF4bFAzbEb2QNA4F2NdiOpHQUyhdnlKpIxalVGjwhUbJMNX_NVtdf7cYoLyJGAJVoFy4i2lTTQdU1SA-cH33Vyr2m0072YPzg85pHxo6uULRiJQy2Bgb2_f5ZCO861vshtCDXs9vQ57NIH-crn-y4nUFxXKef6_W2RTK2Uc5f8-fFlDeL8u7zAIX5csDFG_Pxdenm7eZtOWviaEipmK7haOsVFp9J52ge3wUdPoOGooaEwqyR2KUMY24Pfm4KoZEX2KMIfFsyHFIzUiHJBQTC6VGJ8GtYMTT0uAeMSmneusQ8YZ0pGzV3u0sSf5y5JF17dDZWrs7-QUqobJ3)
+
+### 포인트 충전 API
+[![](https://mermaid.ink/img/pako:eNp1ksFuwjAMhl8lyplp9xyQkODQw0ZFt8sWDiYxEIkmXeJMmhDvPrcpGqgshyixP9u_45ylCRalkgm_MnqDSweHCK32gtfCUIjiPWEs9w4iOeM68CQqTxgNdvTIuairqbHB-O0MCkgileOUWQLBDtIA2V3xl71X8TSfc2YlPut187YVz11wnkapdcXesYQSmWnh7EyYI8QDihtyZJi-FmO8s0B31NV3l3Sg7ONkg7ANUo7-pnqOEbmtidC-G-5js2rq9Wuz2v4bMgRpL2eyxdiCszyrc2_Uko7YopaKjxb3kE-kpfYXRiFTaH68kYpixpkswsfRSrWHU2IrP_hHCH93tI7H_VL-w_AtLr9Nt7Xo?type=png)](https://mermaid.live/edit#pako:eNp1ksFuwjAMhl8lyplp9xyQkODQw0ZFt8sWDiYxEIkmXeJMmhDvPrcpGqgshyixP9u_45ylCRalkgm_MnqDSweHCK32gtfCUIjiPWEs9w4iOeM68CQqTxgNdvTIuairqbHB-O0MCkgileOUWQLBDtIA2V3xl71X8TSfc2YlPut187YVz11wnkapdcXesYQSmWnh7EyYI8QDihtyZJi-FmO8s0B31NV3l3Sg7ONkg7ANUo7-pnqOEbmtidC-G-5js2rq9Wuz2v4bMgRpL2eyxdiCszyrc2_Uko7YopaKjxb3kE-kpfYXRiFTaH68kYpixpkswsfRSrWHU2IrP_hHCH93tI7H_VL-w_AtLr9Nt7Xo)
+
+### 포인트 조회 API
+[![](https://mermaid.ink/img/pako:eNqFUsFqwzAM_RXjc0bvPhQKzUYO20KzXbb0oNrqZmiczJYLI-Tfp8QJ7ehgPhhJ7-lJstxL3RqUSgb8iug0bi18eGhqJ_hsNLVevAb0ye_Ak9W2A0eicIReY0d_gZuyuA1W6M9Wo4AgQjJvOVsgOECYSOaQ8HSPXdyt16ysxPtD_rIXq661jlZ9ZKQww9xyWTBrLqXEiAlrEjZHGV_KKHFvnRGTUOIsyLXIDslbPOMv4kVsaok50bulXiZ09B55oKuM1No4B0-wy6vy-anK9_9lTrm1k5ls0DdgDS-rH4O1pE9ssJaKTYNHiCeqZe0GpkKktvp2WiryETMZOwO07FaqI5wCR_nF39r24qOxvO_H9CGmfzH8ADDBtnY?type=png)](https://mermaid.live/edit#pako:eNqFUsFqwzAM_RXjc0bvPhQKzUYO20KzXbb0oNrqZmiczJYLI-Tfp8QJ7ehgPhhJ7-lJstxL3RqUSgb8iug0bi18eGhqJ_hsNLVevAb0ye_Ak9W2A0eicIReY0d_gZuyuA1W6M9Wo4AgQjJvOVsgOECYSOaQ8HSPXdyt16ysxPtD_rIXq661jlZ9ZKQww9xyWTBrLqXEiAlrEjZHGV_KKHFvnRGTUOIsyLXIDslbPOMv4kVsaok50bulXiZ09B55oKuM1No4B0-wy6vy-anK9_9lTrm1k5ls0DdgDS-rH4O1pE9ssJaKTYNHiCeqZe0GpkKktvp2WiryETMZOwO07FaqI5wCR_nF39r24qOxvO_H9CGmfzH8ADDBtnY)
+
+### 예약 가능 날짜 API
+[![](https://mermaid.ink/img/pako:eNqVUztvgzAQ_isnz1TZGSpFSlplaBqFtENLhsM-WqtgU3NEiqL89xoMCi0ZUgZ0r---e_hOQlpFIhY1fTdkJC00fjgsUwP-m0u2Dl5qckGv0LGWukLDsDJMTlLF15zzzWpqTMgdtCTAGuogTmMWyJhh3QWpLPjDv63i7v5-RBvD--Nyt4eZtL5wxzNHbV5kbc1MIVMdkCPI3wSv5HR-BLZfZEIwFgy7Vg0-TSrYRyX45m6l7oa4WXlQ33wMPQJYc0GXqN7vI4cRxJBro2CUGfCAusAiI2g5LuABMuaZ4rIi4KDQNV9j7hob6tMquj1H6LGdj5_MdplsntfJcg_bEf7feanwzyCsYm35yjp-73VCPt6iDFwPnmrIQMYLnZgaEYmSXIla-Us4tcZU8CeVlIrYi4pybApORWrOPhQbtsnRSBGzaygSTdVW3h-OiHP0hUfCP-c3ay86Ke2P6SlcW3d05x_SsCwu?type=png)](https://mermaid.live/edit#pako:eNqVUztvgzAQ_isnz1TZGSpFSlplaBqFtENLhsM-WqtgU3NEiqL89xoMCi0ZUgZ0r---e_hOQlpFIhY1fTdkJC00fjgsUwP-m0u2Dl5qckGv0LGWukLDsDJMTlLF15zzzWpqTMgdtCTAGuogTmMWyJhh3QWpLPjDv63i7v5-RBvD--Nyt4eZtL5wxzNHbV5kbc1MIVMdkCPI3wSv5HR-BLZfZEIwFgy7Vg0-TSrYRyX45m6l7oa4WXlQ33wMPQJYc0GXqN7vI4cRxJBro2CUGfCAusAiI2g5LuABMuaZ4rIi4KDQNV9j7hob6tMquj1H6LGdj5_MdplsntfJcg_bEf7feanwzyCsYm35yjp-73VCPt6iDFwPnmrIQMYLnZgaEYmSXIla-Us4tcZU8CeVlIrYi4pybApORWrOPhQbtsnRSBGzaygSTdVW3h-OiHP0hUfCP-c3ay86Ke2P6SlcW3d05x_SsCwu)
+
+### 좌석 정보 API
+[![](https://mermaid.ink/img/pako:eNqNU01vwjAM_StRzkzce0BCAiYOY2hlO2zlYBKzRWuTLnGREOK_z23oqOgE9FD54znPz3EOUjmNMpEBfyq0CicGPj0UmRX8jRU5L14D-uiX4MkoU4IlMbeEXmFJ_yXHy3k_mKLfGYUCggjR7GMmQLCB0ID0Jubjv-7iYTTq0Cbi43G6Wouhcty4p2FAoBDRHdhl0Rt6s92LlftGG8GQU3RjzqCO8f5BrOsaazOz5ZyBJ62JOKGE6Zx5SjKslZuImbFaeKwHA2ScFbADk8MmR3FB0NZ0We4qPNM2Mu6qiWrq2bPul2m6fF6k0_WV2j-hmPMtxqkuHN2cbI-ieyEqMs2YqD0BLRuNmVk5kAX6AozmRT7UwUzSFxaYyYRNjVuocspkZo8MhYpcurdKJuQrHMiq1EDt3stkC9z4QPI2vjt39lEbfgtP8bE0b-b4C_sYE8k?type=png)](https://mermaid.live/edit#pako:eNqNU01vwjAM_StRzkzce0BCAiYOY2hlO2zlYBKzRWuTLnGREOK_z23oqOgE9FD54znPz3EOUjmNMpEBfyq0CicGPj0UmRX8jRU5L14D-uiX4MkoU4IlMbeEXmFJ_yXHy3k_mKLfGYUCggjR7GMmQLCB0ID0Jubjv-7iYTTq0Cbi43G6Wouhcty4p2FAoBDRHdhl0Rt6s92LlftGG8GQU3RjzqCO8f5BrOsaazOz5ZyBJ62JOKGE6Zx5SjKslZuImbFaeKwHA2ScFbADk8MmR3FB0NZ0We4qPNM2Mu6qiWrq2bPul2m6fF6k0_WV2j-hmPMtxqkuHN2cbI-ieyEqMs2YqD0BLRuNmVk5kAX6AozmRT7UwUzSFxaYyYRNjVuocspkZo8MhYpcurdKJuQrHMiq1EDt3stkC9z4QPI2vjt39lEbfgtP8bE0b-b4C_sYE8k)
+
+### 좌석 예약 요청 API
+[![](https://mermaid.ink/img/pako:eNqNU8FuwjAM_ZUo14E47dIDEhJM4jCoVthhKweTuhCtTbrUnVQh_n1uU0ZHN209VIn9_Oz3kpyksgnKQJb4XqFRONdwcJDHRvA3U2Sd2Jbo_L4AR1rpAgyJpSF0Cgv6KTkLl8NghO5DKxRQitIvh5g5EOyhbEHJ3uf9v5liPJ322gbiNVxHm52YKMuTO5o4bIiBtDVdVQ9-W_yMTqe12Ng3NB4MGfmtz2lMfHxIxPr-0731MFxywV0nPmDpQEL3mFeWUDh9OJKwqfjCbTAvrANX-wooS30wObJHKZ_Jvci1qQjLK09Xyc0uJgZiWyTA7C3Dvv7W9goft2r8XIbJ81bCrYLGf9b8tIjC9Spa7H4pwIwPz5vIwv40csDa9195Lx9AZxcGNH4RGzmSOXJrnfDtPTXBWNIRc4xlwMsEU6gyimVszgyFimxUGyUDchWOZNUa0112GaTAY48kX8EXa697TDQ_gEf_QtqHcv4E69UOUg?type=png)](https://mermaid.live/edit#pako:eNqNU8FuwjAM_ZUo14E47dIDEhJM4jCoVthhKweTuhCtTbrUnVQh_n1uU0ZHN209VIn9_Oz3kpyksgnKQJb4XqFRONdwcJDHRvA3U2Sd2Jbo_L4AR1rpAgyJpSF0Cgv6KTkLl8NghO5DKxRQitIvh5g5EOyhbEHJ3uf9v5liPJ322gbiNVxHm52YKMuTO5o4bIiBtDVdVQ9-W_yMTqe12Ng3NB4MGfmtz2lMfHxIxPr-0731MFxywV0nPmDpQEL3mFeWUDh9OJKwqfjCbTAvrANX-wooS30wObJHKZ_Jvci1qQjLK09Xyc0uJgZiWyTA7C3Dvv7W9goft2r8XIbJ81bCrYLGf9b8tIjC9Spa7H4pwIwPz5vIwv40csDa9195Lx9AZxcGNH4RGzmSOXJrnfDtPTXBWNIRc4xlwMsEU6gyimVszgyFimxUGyUDchWOZNUa0112GaTAY48kX8EXa697TDQ_gEf_QtqHcv4E69UOUg)
+
+### 결제 API
+[![](https://mermaid.ink/img/pako:eNqVVMFq20AQ_ZVhr3XIXYdAIA740ERUbg-tcljvjqsl0q66WtURIdBC6KH4WOglh5QUejWlh3xTbP9DR1o5VuKapDqI2Z33Zt6MRnPOhJHIAlbghxK1wAPF31uexRro2RfOWHhdoPXnnFunhMq5djDQDq3A3P3LuR8ONi8jtB-VQOAFFN7cxBxwx0e8aEBy5P3-XavY2dvrpA3gXXgcDU9gVxhSbt1uzqsMtfOEDvIx7w1aNa5gaE5RezBPnT96n0Lp7zcDUWlPJG46Fw4I-6ItOYCS1IOSPaqcOzLWyBZC6FXtAYgExamHmolGWyQqh1H1gFcrXjsbLJ6poqPhYfR7KXe_Z4vrK1h-u5z_uFpc3i6-_oRtpLWkgaYKHLSFQkKZjK228Xbus82nn-5uZ4vvf2D55Xr5eQbzX9P5zXQbselu2CbJrRFYFCihKEVtjcs0fZTTN7oeDvoqr_pReHwU9U-eHQJTmjVt_quTjcZhYs0ENE7Iwd2RcYem1LJ_Vs-JMvpZImsmEBUaLvStNbYjTbdfu9Hoh7MGPzWgG2m6cy14rQ4OuUpXEVZ5Ys16LEObcSVpIZzXlzFzCWYYs4BMiWNepi5msb4gKC-diSotWOBsiT1W5pK71f5gwZiT7B6jv_qtMeszSkWD89IvnWb3XPwFcDmCxA?type=png)](https://mermaid.live/edit#pako:eNqVVMFq20AQ_ZVhr3XIXYdAIA740ERUbg-tcljvjqsl0q66WtURIdBC6KH4WOglh5QUejWlh3xTbP9DR1o5VuKapDqI2Z33Zt6MRnPOhJHIAlbghxK1wAPF31uexRro2RfOWHhdoPXnnFunhMq5djDQDq3A3P3LuR8ONi8jtB-VQOAFFN7cxBxwx0e8aEBy5P3-XavY2dvrpA3gXXgcDU9gVxhSbt1uzqsMtfOEDvIx7w1aNa5gaE5RezBPnT96n0Lp7zcDUWlPJG46Fw4I-6ItOYCS1IOSPaqcOzLWyBZC6FXtAYgExamHmolGWyQqh1H1gFcrXjsbLJ6poqPhYfR7KXe_Z4vrK1h-u5z_uFpc3i6-_oRtpLWkgaYKHLSFQkKZjK228Xbus82nn-5uZ4vvf2D55Xr5eQbzX9P5zXQbselu2CbJrRFYFCihKEVtjcs0fZTTN7oeDvoqr_pReHwU9U-eHQJTmjVt_quTjcZhYs0ENE7Iwd2RcYem1LJ_Vs-JMvpZImsmEBUaLvStNbYjTbdfu9Hoh7MGPzWgG2m6cy14rQ4OuUpXEVZ5Ys16LEObcSVpIZzXlzFzCWYYs4BMiWNepi5msb4gKC-diSotWOBsiT1W5pK71f5gwZiT7B6jv_qtMeszSkWD89IvnWb3XPwFcDmCxA)
+
+
+<!-- 
 [![](https://mermaid.ink/img/pako:eNrNV11PE0EU_SuTebUQ-gGUfTAhtpgmBogFH6Q-DLtTOrGdqbOzQCUkaIgR0kQfRNHUpPgRNNGkUWP64h-i2__g7M623ZbdsmpE-9BsO_eec-89Z2Z3d6DODAw1aOJ7FqY6zhC0wVGlQIH8zOuCcbBqYq5-VxEXRCdVRAXIUYG5jqsiaHF-OXf-zzzmm0THAJnAVJfnYzJIoHVkukHGulpX304VE1evSmQNrF3PrtwBdqNpN_dA91Gz-6AFOq3GWftgwCwvZLjHqYHV1VxGxjwBnfreWbtlv_gG7OZR5-u3s5aEePKpe_Sh87ThA-s-PwD2q2f2l88Kz0PqlTAU6Gd06vQtH3dfHhdoQAvLS3nZg2S2X7e7h21gf_9oN_eDa5d5IJeJAb2E-AYGVUaoMEfL6o1OA1bVQMILU1G9NT-qijL8YSM93sTC4tRHb3GOpUi-DH_Pazez-eWlxXz2zkWZYYr6pnHS6r6qj5mGEd7-Qm4xc1HzskBO8GaU9q3fbt-K0r5vH_WNffzYPvoBpDM7h-9B52HTPm0MjO1LGE2_hTkp1sAKu4s9ElQW6qdaI9ibW8iOGkscoEVvjPLC2dJIEEbB_CYiZbRexs7ksTlIDhSLUCMgu7x-LjtYxlBacIOYIojb0zZq4niJo-HgsjzRlAyLTARIMazpOTK_groiW5BcPQRMjQimelO39197h95fcNMwkN9UwcSBbgobZgQP5TESgNAi4xUXIbpxUJ_KDMUYY58o6dFNdBHaP7aSumv1JFXHhbpLXpKlohQwmPiVCN6KjbGOHDEGnGyUBGBF0AdbwZUq44jXlEjINMkGrTgnvMQA06BCqHXhybeq7tJRPDfxx6bz55qWrmPTLFrl_8hSZ19adrNxqSYapQyyjfew4XkkZ4yX9BqjRcIrShO2RTE3S6Q6_iQK18_pqg-i4vD20L1puI4-pNdY99l-56Rh77ftw3cgLGlQfI7KXuUzCqq5Ti5JJsZrYXkTfbbBA3Xvofe03nlbD0t0FVj2SKqcOVaUj2EDU5ZHOEPOzqgQrrsp-6VJujWulDjbAhRvudrLnbHALGpktx0vDek0pkjXNc6mcnNBlnPGfaVR4_J2IIzBCpYeI4Z829txFgpQlHAFF6AmLw1cRFZZFGCB7spQZAmWr1EdaoJbOAbVy4L3cgi1IpIVx6B8ZYPaDtyGWiKZmpydik_PplKJ9NRsKp2OwRrUJuLJdGIymZxJxNMzybn43ExqNwbvMyYxEpPx9FwqMTOVlp-4zHPxbrtrDunuT6ZxE-Y?type=png)](https://mermaid.live/edit#pako:eNrNV11PE0EU_SuTebUQ-gGUfTAhtpgmBogFH6Q-DLtTOrGdqbOzQCUkaIgR0kQfRNHUpPgRNNGkUWP64h-i2__g7M623ZbdsmpE-9BsO_eec-89Z2Z3d6DODAw1aOJ7FqY6zhC0wVGlQIH8zOuCcbBqYq5-VxEXRCdVRAXIUYG5jqsiaHF-OXf-zzzmm0THAJnAVJfnYzJIoHVkukHGulpX304VE1evSmQNrF3PrtwBdqNpN_dA91Gz-6AFOq3GWftgwCwvZLjHqYHV1VxGxjwBnfreWbtlv_gG7OZR5-u3s5aEePKpe_Sh87ThA-s-PwD2q2f2l88Kz0PqlTAU6Gd06vQtH3dfHhdoQAvLS3nZg2S2X7e7h21gf_9oN_eDa5d5IJeJAb2E-AYGVUaoMEfL6o1OA1bVQMILU1G9NT-qijL8YSM93sTC4tRHb3GOpUi-DH_Pazez-eWlxXz2zkWZYYr6pnHS6r6qj5mGEd7-Qm4xc1HzskBO8GaU9q3fbt-K0r5vH_WNffzYPvoBpDM7h-9B52HTPm0MjO1LGE2_hTkp1sAKu4s9ElQW6qdaI9ibW8iOGkscoEVvjPLC2dJIEEbB_CYiZbRexs7ksTlIDhSLUCMgu7x-LjtYxlBacIOYIojb0zZq4niJo-HgsjzRlAyLTARIMazpOTK_groiW5BcPQRMjQimelO39197h95fcNMwkN9UwcSBbgobZgQP5TESgNAi4xUXIbpxUJ_KDMUYY58o6dFNdBHaP7aSumv1JFXHhbpLXpKlohQwmPiVCN6KjbGOHDEGnGyUBGBF0AdbwZUq44jXlEjINMkGrTgnvMQA06BCqHXhybeq7tJRPDfxx6bz55qWrmPTLFrl_8hSZ19adrNxqSYapQyyjfew4XkkZ4yX9BqjRcIrShO2RTE3S6Q6_iQK18_pqg-i4vD20L1puI4-pNdY99l-56Rh77ftw3cgLGlQfI7KXuUzCqq5Ti5JJsZrYXkTfbbBA3Xvofe03nlbD0t0FVj2SKqcOVaUj2EDU5ZHOEPOzqgQrrsp-6VJujWulDjbAhRvudrLnbHALGpktx0vDek0pkjXNc6mcnNBlnPGfaVR4_J2IIzBCpYeI4Z829txFgpQlHAFF6AmLw1cRFZZFGCB7spQZAmWr1EdaoJbOAbVy4L3cgi1IpIVx6B8ZYPaDtyGWiKZmpydik_PplKJ9NRsKp2OwRrUJuLJdGIymZxJxNMzybn43ExqNwbvMyYxEpPx9FwqMTOVlp-4zHPxbrtrDunuT6ZxE-Y)
+-->
