docs : 시퀀스 다이어그램 수정

--- a/hhplus-concert-reservation/document/시퀀스다이어그램.md
+++ b/hhplus-concert-reservation/document/시퀀스다이어그램.md
@@ -1,11 +1,21 @@
-### 유저 토큰 발급 API
+### 유저 번호표 발급 API
+[![](https://mermaid.ink/img/pako:eNrNVEFrGkEU_iuPPbVgsJde9hCwKOKhrsSEQLsik92nDuiMnZk1kRAIJQdLc2hPlVRDLqUtBCqtFAv9Re76Hzru7BI1CW1uncPuzJvvvfm-b4Z3bHncR8u2JL4KkHmYp6QpSMdloEfOU1zAnkRh1l0iFPVolzAFuUrpdrCKokc9BCJBmultTJ4ockBkDPIP4JHH9bFC1Q8JVZQ1H5sM810evbW9rc-y4WXFqe7WIJvgswk-K7BJpUopaqhOSHjYEOgCJd9sJUG9nVKwoUGZ_6y_t4JK91arCFSCYg_jciAVUYF0mcGTtoppLsOBBCoh75QL4OwA4wrwSHMzwBRs0mELnHLRKZWL4PFA26ITnz4B3kuFpOMu1kmJ_Vxpdx18F_nEpzplDX5f6djgJbDONjDGz6VAfQM7hWrFKVcLNQjPT-ezSfRhCuH3wWI4u0lC5qfW_F1xG6UE1SJMa_9n2UmV_1P5hgWrr0OZ50HaAonf37i9DUaqJfghMDyEnIHvGy3LWoUjD7uK8hWX17mi7HImsQbReBp-myVEF-9H4affEE5G89kb_fsYjU8hen0dXXyNLt89hPmG_Sn1e7kX-YOZL4Zn0eU1zH9czSfj8O0QosFIy8gAC3-eAYumA5j_Oo8-awWjq8XFlzX68cJlVsbqoOgQ6uv-drwMupZqYQddy9ZTHxskaCvXctmJhpJA8WqfeZatRIAZK-j6RKXt0LIbpC11VHewF5zfrNGnukU-Nz00bqUnfwDbIdW2?type=png)](https://mermaid.live/edit#pako:eNrNVEFrGkEU_iuPPbVgsJde9hCwKOKhrsSEQLsik92nDuiMnZk1kRAIJQdLc2hPlVRDLqUtBCqtFAv9Re76Hzru7BI1CW1uncPuzJvvvfm-b4Z3bHncR8u2JL4KkHmYp6QpSMdloEfOU1zAnkRh1l0iFPVolzAFuUrpdrCKokc9BCJBmultTJ4ockBkDPIP4JHH9bFC1Q8JVZQ1H5sM810evbW9rc-y4WXFqe7WIJvgswk-K7BJpUopaqhOSHjYEOgCJd9sJUG9nVKwoUGZ_6y_t4JK91arCFSCYg_jciAVUYF0mcGTtoppLsOBBCoh75QL4OwA4wrwSHMzwBRs0mELnHLRKZWL4PFA26ITnz4B3kuFpOMu1kmJ_Vxpdx18F_nEpzplDX5f6djgJbDONjDGz6VAfQM7hWrFKVcLNQjPT-ezSfRhCuH3wWI4u0lC5qfW_F1xG6UE1SJMa_9n2UmV_1P5hgWrr0OZ50HaAonf37i9DUaqJfghMDyEnIHvGy3LWoUjD7uK8hWX17mi7HImsQbReBp-myVEF-9H4affEE5G89kb_fsYjU8hen0dXXyNLt89hPmG_Sn1e7kX-YOZL4Zn0eU1zH9czSfj8O0QosFIy8gAC3-eAYumA5j_Oo8-awWjq8XFlzX68cJlVsbqoOgQ6uv-drwMupZqYQddy9ZTHxskaCvXctmJhpJA8WqfeZatRIAZK-j6RKXt0LIbpC11VHewF5zfrNGnukU-Nz00bqUnfwDbIdW2)
+<!--
 [![](https://mermaid.ink/img/pako:eNptUT1LA0EQ_SvD1kr6KwKBBLlCDZ5p9FJsdid6mNs790OQEIiNIAixMAqSIqWFwqEp_E25u__g3m2CRdximY_HvDfzxoQlHIlHFF4bFAzbEb2QNA4F2NdiOpHQUyhdnlKpIxalVGjwhUbJMNX_NVtdf7cYoLyJGAJVoFy4i2lTTQdU1SA-cH33Vyr2m0072YPzg85pHxo6uULRiJQy2Bgb2_f5ZCO861vshtCDXs9vQ57NIH-crn-y4nUFxXKef6_W2RTK2Uc5f8-fFlDeL8u7zAIX5csDFG_Pxdenm7eZtOWviaEipmK7haOsVFp9J52ge3wUdPoOGooaEwqyR2KUMY24Pfm4KoZEX2KMIfFsyHFIzUiHJBQTC6VGJ8GtYMTT0uAeMSmneusQ8YZ0pGzV3u0sSf5y5JF17dDZWrs7-QUqobJ3?type=png)](https://mermaid.live/edit#pako:eNptUT1LA0EQ_SvD1kr6KwKBBLlCDZ5p9FJsdid6mNs790OQEIiNIAixMAqSIqWFwqEp_E25u__g3m2CRdximY_HvDfzxoQlHIlHFF4bFAzbEb2QNA4F2NdiOpHQUyhdnlKpIxalVGjwhUbJMNX_NVtdf7cYoLyJGAJVoFy4i2lTTQdU1SA-cH33Vyr2m0072YPzg85pHxo6uULRiJQy2Bgb2_f5ZCO861vshtCDXs9vQ57NIH-crn-y4nUFxXKef6_W2RTK2Uc5f8-fFlDeL8u7zAIX5csDFG_Pxdenm7eZtOWviaEipmK7haOsVFp9J52ge3wUdPoOGooaEwqyR2KUMY24Pfm4KoZEX2KMIfFsyHFIzUiHJBQTC6VGJ8GtYMTT0uAeMSmneusQ8YZ0pGzV3u0sSf5y5JF17dDZWrs7-QUqobJ3)
+-->
+
 
 ### 포인트 충전 API
+[![](https://mermaid.ink/img/pako:eNp1kU1PAjEQhv9K0_Ma7z2QEFkjB3HD6kXLYWgHaMK2az9MDOG_O9suEbLaQ9OZeear74krp5ELHvAzoVW4MLD30EnL6MxVdJ69BfTF7sFHo0wPNrJ5s5w6W_RfRiGDwEJ5TpkFRNhCyJDelni5h0Z3sxlVFuzjsX59eNqw-94ZG8dxmiWFxx6CJcKZ0RVTB_B7ZFfkyBB96UZ4ryHeUJfYTdFM6b-L5cnWGJO3V92T90h7TQYd1qFF1nXbvKzaevNvSk6Slle8Q9-B0aTHaXBKHg_YoeSCnhp3kI5RcmnPhEKKrv22iovoE1a8DD7Kx8UOjoG89OPvzv3aqA1J-lw0z9KffwAF1at-?type=png)](https://mermaid.live/edit#pako:eNp1kU1PAjEQhv9K0_Ma7z2QEFkjB3HD6kXLYWgHaMK2az9MDOG_O9suEbLaQ9OZeear74krp5ELHvAzoVW4MLD30EnL6MxVdJ69BfTF7sFHo0wPNrJ5s5w6W_RfRiGDwEJ5TpkFRNhCyJDelni5h0Z3sxlVFuzjsX59eNqw-94ZG8dxmiWFxx6CJcKZ0RVTB_B7ZFfkyBB96UZ4ryHeUJfYTdFM6b-L5cnWGJO3V92T90h7TQYd1qFF1nXbvKzaevNvSk6Slle8Q9-B0aTHaXBKHg_YoeSCnhp3kI5RcmnPhEKKrv22iovoE1a8DD7Kx8UOjoG89OPvzv3aqA1J-lw0z9KffwAF1at-)
+<!--
 [![](https://mermaid.ink/img/pako:eNp1ksFuwjAMhl8lyplp9xyQkODQw0ZFt8sWDiYxEIkmXeJMmhDvPrcpGqgshyixP9u_45ylCRalkgm_MnqDSweHCK32gtfCUIjiPWEs9w4iOeM68CQqTxgNdvTIuairqbHB-O0MCkgileOUWQLBDtIA2V3xl71X8TSfc2YlPut187YVz11wnkapdcXesYQSmWnh7EyYI8QDihtyZJi-FmO8s0B31NV3l3Sg7ONkg7ANUo7-pnqOEbmtidC-G-5js2rq9Wuz2v4bMgRpL2eyxdiCszyrc2_Uko7YopaKjxb3kE-kpfYXRiFTaH68kYpixpkswsfRSrWHU2IrP_hHCH93tI7H_VL-w_AtLr9Nt7Xo?type=png)](https://mermaid.live/edit#pako:eNp1ksFuwjAMhl8lyplp9xyQkODQw0ZFt8sWDiYxEIkmXeJMmhDvPrcpGqgshyixP9u_45ylCRalkgm_MnqDSweHCK32gtfCUIjiPWEs9w4iOeM68CQqTxgNdvTIuairqbHB-O0MCkgileOUWQLBDtIA2V3xl71X8TSfc2YlPut187YVz11wnkapdcXesYQSmWnh7EyYI8QDihtyZJi-FmO8s0B31NV3l3Sg7ONkg7ANUo7-pnqOEbmtidC-G-5js2rq9Wuz2v4bMgRpL2eyxdiCszyrc2_Uko7YopaKjxb3kE-kpfYXRiFTaH68kYpixpkswsfRSrWHU2IrP_hHCH93tI7H_VL-w_AtLr9Nt7Xo)
+-->
 
 ### 포인트 조회 API
+[![](https://mermaid.ink/img/pako:eNqFUU1rwzAM_SvG54zefSgUmo0ctoVmu2zuQbXVztDYmT8KI-S_T4kT2tHDfDCW3tOT5Ndz5TRywQN-J7QKtwZOHlppGZ2Nis6z94A-xx34aJTpwEa2qav7ZIP-YhQyCCzk5z1nCxEOECaSPmQ832Ojh_WalAX7fCrf9mzVOWPjqk-EVHqYp6orYs2tBBsxZnTG5izhSxvBHo3VbBLKnAW5Fdlh9AYv-Id4FZtGIk7ydulXMJW8R1ropiKPNu5BG-zKpn59acr9f5VTrbS84C36FowmP_oxKXn8whYlF_TUeIR0jpJLOxAVUnTNj1VcRJ-w4KnTEBf7uDjCOVCWfvzDuWuM2pClz9nzyfrhF3gxq-g?type=png)](https://mermaid.live/edit#pako:eNqFUU1rwzAM_SvG54zefSgUmo0ctoVmu2zuQbXVztDYmT8KI-S_T4kT2tHDfDCW3tOT5Ndz5TRywQN-J7QKtwZOHlppGZ2Nis6z94A-xx34aJTpwEa2qav7ZIP-YhQyCCzk5z1nCxEOECaSPmQ832Ojh_WalAX7fCrf9mzVOWPjqk-EVHqYp6orYs2tBBsxZnTG5izhSxvBHo3VbBLKnAW5Fdlh9AYv-Id4FZtGIk7ydulXMJW8R1ropiKPNu5BG-zKpn59acr9f5VTrbS84C36FowmP_oxKXn8whYlF_TUeIR0jpJLOxAVUnTNj1VcRJ-w4KnTEBf7uDjCOVCWfvzDuWuM2pClz9nzyfrhF3gxq-g)
+<!--
 [![](https://mermaid.ink/img/pako:eNqFUsFqwzAM_RXjc0bvPhQKzUYO20KzXbb0oNrqZmiczJYLI-Tfp8QJ7ehgPhhJ7-lJstxL3RqUSgb8iug0bi18eGhqJ_hsNLVevAb0ye_Ak9W2A0eicIReY0d_gZuyuA1W6M9Wo4AgQjJvOVsgOECYSOaQ8HSPXdyt16ysxPtD_rIXq661jlZ9ZKQww9xyWTBrLqXEiAlrEjZHGV_KKHFvnRGTUOIsyLXIDslbPOMv4kVsaok50bulXiZ09B55oKuM1No4B0-wy6vy-anK9_9lTrm1k5ls0DdgDS-rH4O1pE9ssJaKTYNHiCeqZe0GpkKktvp2WiryETMZOwO07FaqI5wCR_nF39r24qOxvO_H9CGmfzH8ADDBtnY?type=png)](https://mermaid.live/edit#pako:eNqFUsFqwzAM_RXjc0bvPhQKzUYO20KzXbb0oNrqZmiczJYLI-Tfp8QJ7ehgPhhJ7-lJstxL3RqUSgb8iug0bi18eGhqJ_hsNLVevAb0ye_Ak9W2A0eicIReY0d_gZuyuA1W6M9Wo4AgQjJvOVsgOECYSOaQ8HSPXdyt16ysxPtD_rIXq661jlZ9ZKQww9xyWTBrLqXEiAlrEjZHGV_KKHFvnRGTUOIsyLXIDslbPOMv4kVsaok50bulXiZ09B55oKuM1No4B0-wy6vy-anK9_9lTrm1k5ls0DdgDS-rH4O1pE9ssJaKTYNHiCeqZe0GpkKktvp2WiryETMZOwO07FaqI5wCR_nF39r24qOxvO_H9CGmfzH8ADDBtnY)
+-->
 
 ### 예약 가능 날짜 API
 [![](https://mermaid.ink/img/pako:eNqVUztvgzAQ_isnz1TZGSpFSlplaBqFtENLhsM-WqtgU3NEiqL89xoMCi0ZUgZ0r---e_hOQlpFIhY1fTdkJC00fjgsUwP-m0u2Dl5qckGv0LGWukLDsDJMTlLF15zzzWpqTMgdtCTAGuogTmMWyJhh3QWpLPjDv63i7v5-RBvD--Nyt4eZtL5wxzNHbV5kbc1MIVMdkCPI3wSv5HR-BLZfZEIwFgy7Vg0-TSrYRyX45m6l7oa4WXlQ33wMPQJYc0GXqN7vI4cRxJBro2CUGfCAusAiI2g5LuABMuaZ4rIi4KDQNV9j7hob6tMquj1H6LGdj5_MdplsntfJcg_bEf7feanwzyCsYm35yjp-73VCPt6iDFwPnmrIQMYLnZgaEYmSXIla-Us4tcZU8CeVlIrYi4pybApORWrOPhQbtsnRSBGzaygSTdVW3h-OiHP0hUfCP-c3ay86Ke2P6SlcW3d05x_SsCwu?type=png)](https://mermaid.live/edit#pako:eNqVUztvgzAQ_isnz1TZGSpFSlplaBqFtENLhsM-WqtgU3NEiqL89xoMCi0ZUgZ0r---e_hOQlpFIhY1fTdkJC00fjgsUwP-m0u2Dl5qckGv0LGWukLDsDJMTlLF15zzzWpqTMgdtCTAGuogTmMWyJhh3QWpLPjDv63i7v5-RBvD--Nyt4eZtL5wxzNHbV5kbc1MIVMdkCPI3wSv5HR-BLZfZEIwFgy7Vg0-TSrYRyX45m6l7oa4WXlQ33wMPQJYc0GXqN7vI4cRxJBro2CUGfCAusAiI2g5LuABMuaZ4rIi4KDQNV9j7hob6tMquj1H6LGdj5_MdplsntfJcg_bEf7feanwzyCsYm35yjp-73VCPt6iDFwPnmrIQMYLnZgaEYmSXIla-Us4tcZU8CeVlIrYi4pybApORWrOPhQbtsnRSBGzaygSTdVW3h-OiHP0hUfCP-c3ay86Ke2P6SlcW3d05x_SsCwu)
