--- a/hhplus-concert-reservation/document/시퀀스다이어그램.md
+++ b/hhplus-concert-reservation/document/시퀀스다이어그램.md
@@ -4,6 +4,8 @@
 [![](https://mermaid.ink/img/pako:eNptUT1LA0EQ_SvD1kr6KwKBBLlCDZ5p9FJsdid6mNs790OQEIiNIAixMAqSIqWFwqEp_E25u__g3m2CRdximY_HvDfzxoQlHIlHFF4bFAzbEb2QNA4F2NdiOpHQUyhdnlKpIxalVGjwhUbJMNX_NVtdf7cYoLyJGAJVoFy4i2lTTQdU1SA-cH33Vyr2m0072YPzg85pHxo6uULRiJQy2Bgb2_f5ZCO861vshtCDXs9vQ57NIH-crn-y4nUFxXKef6_W2RTK2Uc5f8-fFlDeL8u7zAIX5csDFG_Pxdenm7eZtOWviaEipmK7haOsVFp9J52ge3wUdPoOGooaEwqyR2KUMY24Pfm4KoZEX2KMIfFsyHFIzUiHJBQTC6VGJ8GtYMTT0uAeMSmneusQ8YZ0pGzV3u0sSf5y5JF17dDZWrs7-QUqobJ3?type=png)](https://mermaid.live/edit#pako:eNptUT1LA0EQ_SvD1kr6KwKBBLlCDZ5p9FJsdid6mNs790OQEIiNIAixMAqSIqWFwqEp_E25u__g3m2CRdximY_HvDfzxoQlHIlHFF4bFAzbEb2QNA4F2NdiOpHQUyhdnlKpIxalVGjwhUbJMNX_NVtdf7cYoLyJGAJVoFy4i2lTTQdU1SA-cH33Vyr2m0072YPzg85pHxo6uULRiJQy2Bgb2_f5ZCO861vshtCDXs9vQ57NIH-crn-y4nUFxXKef6_W2RTK2Uc5f8-fFlDeL8u7zAIX5csDFG_Pxdenm7eZtOWviaEipmK7haOsVFp9J52ge3wUdPoOGooaEwqyR2KUMY24Pfm4KoZEX2KMIfFsyHFIzUiHJBQTC6VGJ8GtYMTT0uAeMSmneusQ8YZ0pGzV3u0sSf5y5JF17dDZWrs7-QUqobJ3)
 -->
 
+### 번호표 대기열 조회 API
+[![](https://mermaid.ink/img/pako:eNqNk0Fr2zAUx7_KQ6cNsuXuQyEjIfgwJzQpg82jqNZLK5ZImSU3DSHQ0RaytpceCmFLywaFjbFDGN3IvlJsf4fJlkM2urH6IEvv_Z_-Pwm9EQkkQ-IQha8jFAFWOd0Nac8XYL5KoGUIWwpDu-7TUPOA96nQUGm6d4MtDPd5gEAVKDu9q6lSTXeoykVsBx4E0tiGentAueZi96GtsGNm_Whjw3g5UK-1oVyIy4W4rDTVkSqPIiN02bjAbrqmqGBxIMsBZzZXRE1-xeFAhwv2ZOiyrXwTq1tlf99oE3XIcR8ZrJkzCl_YGtrVYIGAK3hWcds2_qdvfpiMf5uLjlwrLHXG4MCLzVqr2fBatZfgxV9OID4_XC7myc1FcrWA5OhNejSzhdg1F7n2rDdcr_5PU70XygEIHEClGyJlw7o09Jlj7SDAvuZS_BcnnR4n118hmczib5Pk-iQ-m8RnN48N5o9j8JLbCSx_niefDiGZfUjfff4rZbXh1cA8LCE14AFXWt0D2ZNtHrxC7SoVIbs_cDyfLRdv4_n75OoQDHM6XaQXs-XcEH68NUdJL6c57uVpcvq9OE1BLdjqLeZ_X5AS6WHYo5yZjhllQZ_oPeyhTxwzZdihUVf7xBdjI6WRlq2hCIijwwhLJOozqlcNRpwONbdSIqYnnku5XiPjpume2q7Mm3P8C0bvVjU?type=png)](https://mermaid.live/edit#pako:eNqNk0Fr2zAUx7_KQ6cNsuXuQyEjIfgwJzQpg82jqNZLK5ZImSU3DSHQ0RaytpceCmFLywaFjbFDGN3IvlJsf4fJlkM2urH6IEvv_Z_-Pwm9EQkkQ-IQha8jFAFWOd0Nac8XYL5KoGUIWwpDu-7TUPOA96nQUGm6d4MtDPd5gEAVKDu9q6lSTXeoykVsBx4E0tiGentAueZi96GtsGNm_Whjw3g5UK-1oVyIy4W4rDTVkSqPIiN02bjAbrqmqGBxIMsBZzZXRE1-xeFAhwv2ZOiyrXwTq1tlf99oE3XIcR8ZrJkzCl_YGtrVYIGAK3hWcds2_qdvfpiMf5uLjlwrLHXG4MCLzVqr2fBatZfgxV9OID4_XC7myc1FcrWA5OhNejSzhdg1F7n2rDdcr_5PU70XygEIHEClGyJlw7o09Jlj7SDAvuZS_BcnnR4n118hmczib5Pk-iQ-m8RnN48N5o9j8JLbCSx_niefDiGZfUjfff4rZbXh1cA8LCE14AFXWt0D2ZNtHrxC7SoVIbs_cDyfLRdv4_n75OoQDHM6XaQXs-XcEH68NUdJL6c57uVpcvq9OE1BLdjqLeZ_X5AS6WHYo5yZjhllQZ_oPeyhTxwzZdihUVf7xBdjI6WRlq2hCIijwwhLJOozqlcNRpwONbdSIqYnnku5XiPjpume2q7Mm3P8C0bvVjU)
 
 ### 포인트 충전 API
 [![](https://mermaid.ink/img/pako:eNp1kU1PAjEQhv9K0_Ma7z2QEFkjB3HD6kXLYWgHaMK2az9MDOG_O9suEbLaQ9OZeear74krp5ELHvAzoVW4MLD30EnL6MxVdJ69BfTF7sFHo0wPNrJ5s5w6W_RfRiGDwEJ5TpkFRNhCyJDelni5h0Z3sxlVFuzjsX59eNqw-94ZG8dxmiWFxx6CJcKZ0RVTB_B7ZFfkyBB96UZ4ryHeUJfYTdFM6b-L5cnWGJO3V92T90h7TQYd1qFF1nXbvKzaevNvSk6Slle8Q9-B0aTHaXBKHg_YoeSCnhp3kI5RcmnPhEKKrv22iovoE1a8DD7Kx8UOjoG89OPvzv3aqA1J-lw0z9KffwAF1at-?type=png)](https://mermaid.live/edit#pako:eNp1kU1PAjEQhv9K0_Ma7z2QEFkjB3HD6kXLYWgHaMK2az9MDOG_O9suEbLaQ9OZeear74krp5ELHvAzoVW4MLD30EnL6MxVdJ69BfTF7sFHo0wPNrJ5s5w6W_RfRiGDwEJ5TpkFRNhCyJDelni5h0Z3sxlVFuzjsX59eNqw-94ZG8dxmiWFxx6CJcKZ0RVTB_B7ZFfkyBB96UZ4ryHeUJfYTdFM6b-L5cnWGJO3V92T90h7TQYd1qFF1nXbvKzaevNvSk6Slle8Q9-B0aTHaXBKHg_YoeSCnhp3kI5RcmnPhEKKrv22iovoE1a8DD7Kx8UOjoG89OPvzv3aqA1J-lw0z9KffwAF1at-)
