--- a/document/시퀀스다이어그램.md
+++ b/document/시퀀스다이어그램.md
@@ -1,11 +1,17 @@
-### 유저 번호표 발급 API
+### 대기열 신청 API
+[![](https://mermaid.ink/img/pako:eNp1UrFu2zAQ_RWCaxVbsijb4hDAgDMERRzXShZbHgiKdYhYlEuRbVPDS9EhY4AMBYokQKeiQJd2yj9ZH5GTaLco0nIgjnfv3r073hrzIhOY4lK8sUJxMZRsoVmeKgRnwE2h0XkptHuvmDaSyxVTBg3Gx8-didBvJReIlah05nPMRGSyrBG6Nlzc3XWhg8NDYKZoNj5NzuaozQsQpU37HZNGqkVbi4UszV4QQCFhV5UiCwTHmQvtnBB-0VSkqKZ4ZYUV1ecbVH38UX35Xj3coO3tz-3Xe5fUICFllzGbDoZDxIs8ZypDUqGdioZljrjVWihzJnNxIpdLWXp_KXBkwHbwW-BsOhmMXv6f8V8N7Ceimbr80zV463EB5eQoGZ-OkqM5GqHtr-vq2yOqru-qT3ep2g83VdjDudA5kxn89br2p9hciFykmIKZMX2Z4lRtAMesKZIrxTE12goP21XGzH4vMH3NliV4oTfYjRO3PM0OeRi-F9M1fo9pEMWtjt_1CfFDPyS9Ts_DV5jGpBX0O1E37ockJHEcbTz8oSiA1W_1uiGJgn5AulFA-nHY0E2boNOhC7u4cI_NE1266bs?type=png)](https://mermaid.live/edit#pako:eNp1UrFu2zAQ_RWCaxVbsijb4hDAgDMERRzXShZbHgiKdYhYlEuRbVPDS9EhY4AMBYokQKeiQJd2yj9ZH5GTaLco0nIgjnfv3r073hrzIhOY4lK8sUJxMZRsoVmeKgRnwE2h0XkptHuvmDaSyxVTBg3Gx8-didBvJReIlah05nPMRGSyrBG6Nlzc3XWhg8NDYKZoNj5NzuaozQsQpU37HZNGqkVbi4UszV4QQCFhV5UiCwTHmQvtnBB-0VSkqKZ4ZYUV1ecbVH38UX35Xj3coO3tz-3Xe5fUICFllzGbDoZDxIs8ZypDUqGdioZljrjVWihzJnNxIpdLWXp_KXBkwHbwW-BsOhmMXv6f8V8N7Ceimbr80zV463EB5eQoGZ-OkqM5GqHtr-vq2yOqru-qT3ep2g83VdjDudA5kxn89br2p9hciFykmIKZMX2Z4lRtAMesKZIrxTE12goP21XGzH4vMH3NliV4oTfYjRO3PM0OeRi-F9M1fo9pEMWtjt_1CfFDPyS9Ts_DV5jGpBX0O1E37ockJHEcbTz8oSiA1W_1uiGJgn5AulFA-nHY0E2boNOhC7u4cI_NE1266bs)
+<!--
 [![](https://mermaid.ink/img/pako:eNrNVEFLG0EU_iuPObUQNWsSNXsQUgySQxMxitCuyLg70YFkJp2ZVWMQpHiw1EN7qtgoXkpbECqtlBT6i7Kb_9DZnV3UaKC9dQ67M-9973vfezO8LnK5R5CNJHnlE-aSBYq3BG45DPQquYoLWJVEmHMbC0Vd2sZMQWmp8tBYJ2KHugSwBGm2DzELWOFNLGOQtwlPXK7TCrWxi6mibOupiTDfKPXE_LzOZcPLpVp9ZR2mEvxUgp8SZItKlUrUUB2Q6LDB1wQVz7gSo3anEmxoUOY966zeQaW-uyyCKEHJDonpQCqsfOkwg8dNFcuMzL4EKmGhVi1DbRkYV0D2tDYDTMEmHCagVl2sVaqL4HJft0UHFrLAd9JC0vWY6oRirVRZuQ9-THzSpw3KGnwcddzgCLjBRjCmn1GB-gaWy_WlWrVeXofg5HDQvw4_3EDw_Xh42r8NIk19teNrbBIpQW1jpqv960ITlv-vVpY8mnjz8D0o8yBwUxDsdUbua0SR2hZ8FxjZhZKBr5laIq7ynkvainJ2G31fK5FtziRZh_D8JvjWT4QO3_eCT78huO4N-m_072N4fgjh66vw7Gt48S5RHl3XGL0jTU8Fj1W8yP9Z7_D0KLy4gsGPy8H1efD2FMLjnhafARb8PAIW3hzD4NdJ-Fnr7l0Oz77ca3d8cBjKoBYRLUw9Pce6kdFBapu0iINsvfVIA_tN5SCHHWgo9hWvd5iLbCV8kkF-28MqHXvIbmDdkAzSkwrZXbSH7JnipJW3ZuYKc3krN12cLmZQB9kT1uz0ZL6Yy84WrGIxn7VmcgcZtM-5prAmc_lsVvuyVmFOh1i5mO9F7DRJiUf1ZH1uRm88gQ_-AJks4W4?type=png)](https://mermaid.live/edit#pako:eNrNVEFLG0EU_iuPObUQNWsSNXsQUgySQxMxitCuyLg70YFkJp2ZVWMQpHiw1EN7qtgoXkpbECqtlBT6i7Kb_9DZnV3UaKC9dQ67M-9973vfezO8LnK5R5CNJHnlE-aSBYq3BG45DPQquYoLWJVEmHMbC0Vd2sZMQWmp8tBYJ2KHugSwBGm2DzELWOFNLGOQtwlPXK7TCrWxi6mibOupiTDfKPXE_LzOZcPLpVp9ZR2mEvxUgp8SZItKlUrUUB2Q6LDB1wQVz7gSo3anEmxoUOY966zeQaW-uyyCKEHJDonpQCqsfOkwg8dNFcuMzL4EKmGhVi1DbRkYV0D2tDYDTMEmHCagVl2sVaqL4HJft0UHFrLAd9JC0vWY6oRirVRZuQ9-THzSpw3KGnwcddzgCLjBRjCmn1GB-gaWy_WlWrVeXofg5HDQvw4_3EDw_Xh42r8NIk19teNrbBIpQW1jpqv960ITlv-vVpY8mnjz8D0o8yBwUxDsdUbua0SR2hZ8FxjZhZKBr5laIq7ynkvainJ2G31fK5FtziRZh_D8JvjWT4QO3_eCT78huO4N-m_072N4fgjh66vw7Gt48S5RHl3XGL0jTU8Fj1W8yP9Z7_D0KLy4gsGPy8H1efD2FMLjnhafARb8PAIW3hzD4NdJ-Fnr7l0Oz77ca3d8cBjKoBYRLUw9Pce6kdFBapu0iINsvfVIA_tN5SCHHWgo9hWvd5iLbCV8kkF-28MqHXvIbmDdkAzSkwrZXbSH7JnipJW3ZuYKc3krN12cLmZQB9kT1uz0ZL6Yy84WrGIxn7VmcgcZtM-5prAmc_lsVvuyVmFOh1i5mO9F7DRJiUf1ZH1uRm88gQ_-AJks4W4)
+-->
 <!--
 [![](https://mermaid.ink/img/pako:eNptUT1LA0EQ_SvD1kr6KwKBBLlCDZ5p9FJsdid6mNs790OQEIiNIAixMAqSIqWFwqEp_E25u__g3m2CRdximY_HvDfzxoQlHIlHFF4bFAzbEb2QNA4F2NdiOpHQUyhdnlKpIxalVGjwhUbJMNX_NVtdf7cYoLyJGAJVoFy4i2lTTQdU1SA-cH33Vyr2m0072YPzg85pHxo6uULRiJQy2Bgb2_f5ZCO861vshtCDXs9vQ57NIH-crn-y4nUFxXKef6_W2RTK2Uc5f8-fFlDeL8u7zAIX5csDFG_Pxdenm7eZtOWviaEipmK7haOsVFp9J52ge3wUdPoOGooaEwqyR2KUMY24Pfm4KoZEX2KMIfFsyHFIzUiHJBQTC6VGJ8GtYMTT0uAeMSmneusQ8YZ0pGzV3u0sSf5y5JF17dDZWrs7-QUqobJ3?type=png)](https://mermaid.live/edit#pako:eNptUT1LA0EQ_SvD1kr6KwKBBLlCDZ5p9FJsdid6mNs790OQEIiNIAixMAqSIqWFwqEp_E25u__g3m2CRdximY_HvDfzxoQlHIlHFF4bFAzbEb2QNA4F2NdiOpHQUyhdnlKpIxalVGjwhUbJMNX_NVtdf7cYoLyJGAJVoFy4i2lTTQdU1SA-cH33Vyr2m0072YPzg85pHxo6uULRiJQy2Bgb2_f5ZCO861vshtCDXs9vQ57NIH-crn-y4nUFxXKef6_W2RTK2Uc5f8-fFlDeL8u7zAIX5csDFG_Pxdenm7eZtOWviaEipmK7haOsVFp9J52ge3wUdPoOGooaEwqyR2KUMY24Pfm4KoZEX2KMIfFsyHFIzUiHJBQTC6VGJ8GtYMTT0uAeMSmneusQ8YZ0pGzV3u0sSf5y5JF17dDZWrs7-QUqobJ3)
 -->
 
-### 번호표 대기열 조회 API
+### 대기열 조회 API
+[![](https://mermaid.ink/img/pako:eNqNlF1PGkEUhv_KyVzZuArIgrAXJqQllrRFC5g2ijGT3SlulBm6O-tHCYmtXNiWC5t--BFoYtqENOmFNr3wN7nDf-jMLghUTdyr2TnnvOc9z2SmjkxmEWQgl7z2CDXJIxtXHFwtU5BfxuTMgSWXOOF_DTvcNu0aphwyi7mbm0XibNkmAeyCGy5v5hSIZbsqw1GLMg0zVJOpuTmpasDKfLa0ChGTST8Oj2xjm9u0EnE55p4bqXsyNWc1-hYXc7Ks39eAMBaG-psyPBn0NEApPfeIR8TRoWi2Qbz7LU5_ie-HIA7aot0EcXbeO22F5UHNlKyeulZfWS5k8k_AZNUqphbYFPreAtHVse54U46K6QaQHdvlbrg5amswraOSJiE2zFAzyahCInsWssXFhXwxuwp58P8ciO5l4LbZDgvIpkvCRhYjLlDGw45DOeVEaSm_jFbYwO8w43ZaotvsfXsP4ucn0bkEv7V3dXkujv7-z050jqFUejrGbvDdxvCxPN1RhKOWxhHeRUx1m7j2A3635f9oiY_tq_Pmg_HKu0j2TiTAi97JF7H_trff1gLJYWnANECmcN4L28AbX3fYNlCyDQ_liIxmd0xS4zajMJFfKK1lX-aKpbUXmVwpl59fWypmC_d0PIof_M8X_lnHPzwW3T0QXz-Izt7wPEbGoH2Q1wt125CGqsSpYtuS176u9suIr5MqKSNDLi3sbJRRmTZkHvY4K-5SExnc8YiGvJqF-eCJQMYrLDlpSJ6xfCaehe9I8JxoSN50ZNTRDjJiifT0TDQZ1fVoPBrXZ2dmNbSLjLQ-HUvNJJLpVFyP6-l0oqGhN4xJ1ej0bDKuJ2KpmJ5MxPRUOh7ILQfB0IfDvMp6-NP4B46xr6w?type=png)](https://mermaid.live/edit#pako:eNqNlF1PGkEUhv_KyVzZuArIgrAXJqQllrRFC5g2ijGT3SlulBm6O-tHCYmtXNiWC5t--BFoYtqENOmFNr3wN7nDf-jMLghUTdyr2TnnvOc9z2SmjkxmEWQgl7z2CDXJIxtXHFwtU5BfxuTMgSWXOOF_DTvcNu0aphwyi7mbm0XibNkmAeyCGy5v5hSIZbsqw1GLMg0zVJOpuTmpasDKfLa0ChGTST8Oj2xjm9u0EnE55p4bqXsyNWc1-hYXc7Ks39eAMBaG-psyPBn0NEApPfeIR8TRoWi2Qbz7LU5_ie-HIA7aot0EcXbeO22F5UHNlKyeulZfWS5k8k_AZNUqphbYFPreAtHVse54U46K6QaQHdvlbrg5amswraOSJiE2zFAzyahCInsWssXFhXwxuwp58P8ciO5l4LbZDgvIpkvCRhYjLlDGw45DOeVEaSm_jFbYwO8w43ZaotvsfXsP4ucn0bkEv7V3dXkujv7-z050jqFUejrGbvDdxvCxPN1RhKOWxhHeRUx1m7j2A3635f9oiY_tq_Pmg_HKu0j2TiTAi97JF7H_trff1gLJYWnANECmcN4L28AbX3fYNlCyDQ_liIxmd0xS4zajMJFfKK1lX-aKpbUXmVwpl59fWypmC_d0PIof_M8X_lnHPzwW3T0QXz-Izt7wPEbGoH2Q1wt125CGqsSpYtuS176u9suIr5MqKSNDLi3sbJRRmTZkHvY4K-5SExnc8YiGvJqF-eCJQMYrLDlpSJ6xfCaehe9I8JxoSN50ZNTRDjJiifT0TDQZ1fVoPBrXZ2dmNbSLjLQ-HUvNJJLpVFyP6-l0oqGhN4xJ1ej0bDKuJ2KpmJ5MxPRUOh7ILQfB0IfDvMp6-NP4B46xr6w)
+<!--
 [![](https://mermaid.ink/img/pako:eNqNk99rE0EQx_-VYZ8UYn5e0uYeCtGEcA8moakU9KRsbzftYrIX7_baxBCotIXY9qUPhaBpUSgo4kOQKvFfyl3-Bze3F6JWsftwtzv7nZnPDDs9ZNmEIh259KVHuUWLDO84uGVykKtgCduBJy511LmNHcEs1sZcQKFm3DbWqbPHLArYBVdtb2uKWOBt7IYisg33LFumdcTWPmaC8Z37ykN956kfrK3JXDqUSxuQiMSJSJxwBRaem-hF9k1lNkg_KqBmSPeISgdPhgNG1F1klfcLIh0ajJOHXYM8-iOc8ljofg25ToXD6B4lsKxj7mNy5YObAhQkMBc2C8aGsv9OEBY4r2mL8Ya9VCj-eRd0eLZeqteqlXrpOVT8z8fgnx1MJ-Pg-jy4nEBw-Hp2OFKOtCmbu8xZrhqV8j-Til3H3gdO96HQdCgm3bIt6ecZSx2LtgWz-X9xZsOj4OoLBIOR_3UQXB37pwP_9DouMb8fQSW4GcD0x1nw8QCC0fvZ209_pSxWKyWQj43bAmiHucK9A3LF3mDWCyoM1_UouTuwPx5NJ2_88bvg8gAk82w4mZ2PpmNJ-OFGljK7GIa4FyfBybeomoiak8X7DP8mRzHUok4LMyKnqDc3mkjs0hY1kS63hDaw1xQmMnlfSrEn7HqXW0gXjkdjyGsTLBZDh_QGll2JITknSO-hDtIzWlxbzeTSuWxSrpXUSi6GukhPp3Px5Goqvaql8-l8JqNl-zH0yrZliFR8JZnSkloyr-XyuaSWDcM9De-i8JQwOdeP1eCH89__CVeDcEw?type=png)](https://mermaid.live/edit#pako:eNqNk99rE0EQx_-VYZ8UYn5e0uYeCtGEcA8moakU9KRsbzftYrIX7_baxBCotIXY9qUPhaBpUSgo4kOQKvFfyl3-Bze3F6JWsftwtzv7nZnPDDs9ZNmEIh259KVHuUWLDO84uGVykKtgCduBJy511LmNHcEs1sZcQKFm3DbWqbPHLArYBVdtb2uKWOBt7IYisg33LFumdcTWPmaC8Z37ykN956kfrK3JXDqUSxuQiMSJSJxwBRaem-hF9k1lNkg_KqBmSPeISgdPhgNG1F1klfcLIh0ajJOHXYM8-iOc8ljofg25ToXD6B4lsKxj7mNy5YObAhQkMBc2C8aGsv9OEBY4r2mL8Ya9VCj-eRd0eLZeqteqlXrpOVT8z8fgnx1MJ-Pg-jy4nEBw-Hp2OFKOtCmbu8xZrhqV8j-Til3H3gdO96HQdCgm3bIt6ecZSx2LtgWz-X9xZsOj4OoLBIOR_3UQXB37pwP_9DouMb8fQSW4GcD0x1nw8QCC0fvZ209_pSxWKyWQj43bAmiHucK9A3LF3mDWCyoM1_UouTuwPx5NJ2_88bvg8gAk82w4mZ2PpmNJ-OFGljK7GIa4FyfBybeomoiak8X7DP8mRzHUok4LMyKnqDc3mkjs0hY1kS63hDaw1xQmMnlfSrEn7HqXW0gXjkdjyGsTLBZDh_QGll2JITknSO-hDtIzWlxbzeTSuWxSrpXUSi6GukhPp3Px5Goqvaql8-l8JqNl-zH0yrZliFR8JZnSkloyr-XyuaSWDcM9De-i8JQwOdeP1eCH89__CVeDcEw)
+-->
 <!--
 [![](https://mermaid.ink/img/pako:eNqNk0Fr2zAUx7_KQ6cNsuXuQyEjIfgwJzQpg82jqNZLK5ZImSU3DSHQ0RaytpceCmFLywaFjbFDGN3IvlJsf4fJlkM2urH6IEvv_Z_-Pwm9EQkkQ-IQha8jFAFWOd0Nac8XYL5KoGUIWwpDu-7TUPOA96nQUGm6d4MtDPd5gEAVKDu9q6lSTXeoykVsBx4E0tiGentAueZi96GtsGNm_Whjw3g5UK-1oVyIy4W4rDTVkSqPIiN02bjAbrqmqGBxIMsBZzZXRE1-xeFAhwv2ZOiyrXwTq1tlf99oE3XIcR8ZrJkzCl_YGtrVYIGAK3hWcds2_qdvfpiMf5uLjlwrLHXG4MCLzVqr2fBatZfgxV9OID4_XC7myc1FcrWA5OhNejSzhdg1F7n2rDdcr_5PU70XygEIHEClGyJlw7o09Jlj7SDAvuZS_BcnnR4n118hmczib5Pk-iQ-m8RnN48N5o9j8JLbCSx_niefDiGZfUjfff4rZbXh1cA8LCE14AFXWt0D2ZNtHrxC7SoVIbs_cDyfLRdv4_n75OoQDHM6XaQXs-XcEH68NUdJL6c57uVpcvq9OE1BLdjqLeZ_X5AS6WHYo5yZjhllQZ_oPeyhTxwzZdihUVf7xBdjI6WRlq2hCIijwwhLJOozqlcNRpwONbdSIqYnnku5XiPjpume2q7Mm3P8C0bvVjU?type=png)](https://mermaid.live/edit#pako:eNqNk0Fr2zAUx7_KQ6cNsuXuQyEjIfgwJzQpg82jqNZLK5ZImSU3DSHQ0RaytpceCmFLywaFjbFDGN3IvlJsf4fJlkM2urH6IEvv_Z_-Pwm9EQkkQ-IQha8jFAFWOd0Nac8XYL5KoGUIWwpDu-7TUPOA96nQUGm6d4MtDPd5gEAVKDu9q6lSTXeoykVsBx4E0tiGentAueZi96GtsGNm_Whjw3g5UK-1oVyIy4W4rDTVkSqPIiN02bjAbrqmqGBxIMsBZzZXRE1-xeFAhwv2ZOiyrXwTq1tlf99oE3XIcR8ZrJkzCl_YGtrVYIGAK3hWcds2_qdvfpiMf5uLjlwrLHXG4MCLzVqr2fBatZfgxV9OID4_XC7myc1FcrWA5OhNejSzhdg1F7n2rDdcr_5PU70XygEIHEClGyJlw7o09Jlj7SDAvuZS_BcnnR4n118hmczib5Pk-iQ-m8RnN48N5o9j8JLbCSx_niefDiGZfUjfff4rZbXh1cA8LCE14AFXWt0D2ZNtHrxC7SoVIbs_cDyfLRdv4_n75OoQDHM6XaQXs-XcEH68NUdJL6c57uVpcvq9OE1BLdjqLeZ_X5AS6WHYo5yZjhllQZ_oPeyhTxwzZdihUVf7xBdjI6WRlq2hCIijwwhLJOozqlcNRpwONbdSIqYnnku5XiPjpume2q7Mm3P8C0bvVjU)
 -->
